# apriltag_kinect2

./: CMakeLists.txt  README.md  package.xml
include/: apriltags.h
include/apriltag_kinect2/: apriltags.h  kinect_utilities.hpp
launch/: kinect2.launch
msg/: AprilKinectDetection.msg  AprilKinectDetections.msg
src/: apriltags.cpp  apriltags_kinect2.cpp  kinect_utilities.hpp
